Removed a whimsical debugging variable from event actions. Fixed some more of the menu styling. Looking better, still needs some cleanup on spacing and such.

--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -56,12 +56,20 @@ ul.menu a, ul.menu li.dis a:hover, ul.menu li.sep a:hover {
 ul.menu>li>a {
   padding: 5px 4px;
 }
-/*ul.menu>li>a:hover {
+ul.menu>li>a:hover, ul.menu>li:hover>a {
   border: solid 1px #dadada;
   padding: 4px 3px;
   -moz-border-radius: 10px 10px 0px 0px;
   -webkit-border-radius: 10px 10px 0px 0px;
-}*/
+  color: #ff8f00;
+  text-shadow: 0px 0px 2px #ff8f00;
+  text-decoration:none;
+}
+ul.menu>li>ul>li:hover>a {
+  color: #ff8f00;
+  text-shadow: 0px 0px 2px #ff8f00;
+  text-decoration:none;
+}
 ul.menu li.dis a:hover, ul.menu li.sep a:hover {
   padding:4px;
 }
@@ -113,7 +121,7 @@ ul.menu li a:hover{
 	border-style:solid;
 	font:bold 12px helvetica, arial, verdana;
 	color: #ff8f00;
-        text-shadow: 0px 0px 5px #ff8f00;
+        text-shadow: 0px 0px 2px #ff8f00;
 	text-decoration:none;
 }
 ul.menu li.dis a {
